[package]
name = "rdr2-flying-horse-mod"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_UI_Input_KeyboardAndMouse"
]
